[gd_scene load_steps=7 format=3 uid="uid://cmtcgxpdq5mrj"]

[ext_resource type="Script" path="res://scenes/Main Menu.gd" id="1_rjn11"]
[ext_resource type="AudioStream" uid="uid://crwtutceuuea5" path="res://sounds/lofi.wav" id="2_j5o8y"]
[ext_resource type="Texture2D" uid="uid://3sna3fk7yol1" path="res://sprites/ui/background.png" id="2_wg46u"]
[ext_resource type="Texture2D" uid="uid://da0ppksy74oar" path="res://sprites/ui/settings.png" id="3_batyp"]
[ext_resource type="Texture2D" uid="uid://bo8rcl8aioh66" path="res://sprites/ui/exit.png" id="4_eqq0y"]
[ext_resource type="FontFile" uid="uid://oalfutm1mv07" path="res://fonts/FiraSans-Bold.ttf" id="5_lxfsf"]

[node name="Main_Menu_Scene_Head" type="Node2D"]
script = ExtResource("1_rjn11")

[node name="Background" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_wg46u")
stretch_mode = 6

[node name="Start Button" type="Button" parent="."]
custom_minimum_size = Vector2(337, 0)
offset_left = 812.0
offset_top = 950.0
offset_right = 1149.0
offset_bottom = 1013.0
theme_override_font_sizes/font_size = 40
text = "Start Game"

[node name="Options Button" type="Button" parent="."]
offset_left = 1615.0
offset_top = 56.0
offset_right = 1707.0
offset_bottom = 148.0
icon = ExtResource("3_batyp")

[node name="Quit Button" type="Button" parent="."]
offset_left = 1743.0
offset_top = 54.0
offset_right = 1835.0
offset_bottom = 146.0
icon = ExtResource("4_eqq0y")

[node name="Title Text" type="RichTextLabel" parent="."]
offset_left = 635.0
offset_top = 671.0
offset_right = 1304.0
offset_bottom = 755.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/normal_font = ExtResource("5_lxfsf")
theme_override_fonts/bold_font = ExtResource("5_lxfsf")
theme_override_font_sizes/normal_font_size = 69
bbcode_enabled = true
text = "[center]THE PYRAMID[/center]"
fit_content = true
scroll_active = false

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_j5o8y")

[connection signal="pressed" from="Start Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Options Button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Quit Button" to="." method="_on_quit_button_pressed"]
